--- a/style.css
+++ b/style.css
@@ -152,9 +152,10 @@
     min-height: 443px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .pixelgrade-sub{
+    width: 90%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -167,7 +168,7 @@
     display: flex;
 flex-direction: column;
     gap: 1rem;
-    align-items: start;
+    align-items: flex-start;
 }
 .pixelgrade-text h2{
     color: #4D4D4D;
@@ -179,4 +180,38 @@ flex-direction: column;
 }
 .learnmore{
     width: 30%;
+}
+.stats{
+    width: 100%;
+    background-color: #F5F7FA;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 10rem;
+    height: 300px;
+    padding: 0 3rem;
+}
+.stats-sub{
+    display:grid;
+    grid-template-columns: 1fr 2fr;
+    width: 30%;
+    gap: 2rem;
+}
+.stats-sub div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
+    gap: 1rem;
+}
+.stats-sub div h1{
+ font-size: 1rem;
+}
+.helping h3{
+    color: #4CAF4F;
+    font-size: 2rem;
+}
+.helping h2{
+    font-size: 2rem;
+    color: #2e2c2c;
 }
